fixed images looking blocky on mobile

--- a/dev/styles/pages/_simpleProjects.scss
+++ b/dev/styles/pages/_simpleProjects.scss
@@ -259,7 +259,11 @@ body {
         text-align: center;
         img {
             height: 100%;
-            object-fit: cover;
+            object-fit: scale-down;
+            width: 100%;
+            @media (min-width: 600px) {
+                object-fit: fill;
+            }
         }
 
     }
